# streaming-parsers

./: README.md  stack.yaml
parsax/: LICENSE  README.md  parsax.cabal
parsax/examples/: stack-fake.yaml  stack.hs
parsax/src/Control/Alt/: Free.hs
parsax/src/Data/: Parsax.hs
parsax/src/Data/Parsax/: Json.hs  Yaml.hs
parsax/src/Data/Parsax/Yaml/: Doc.hs
parsax/test/: Spec.hs
parsax/test/assets/: mapping.yaml  stack-variables.yaml  stack.json  stack.yaml  variables.yaml
reparsec/: LICENSE  README.md  reparsec.cabal
reparsec/src/Data/: Reparsec.hs
reparsec/src/Data/Reparsec/: List.hs  Sequence.hs  Text.hs
reparsec/src/Data/Reparsec/List/: Char.hs
reparsec/test/: Spec.hs
