name:                parsax
version:             0.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          git@chrisdone.com
copyright:           Chris Done
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Parsax
  build-depends:       base >= 4.7 && < 5,
                       conduit,
                       reparsec,
                       bytestring,
                       text
  default-language:    Haskell2010

test-suite parsax-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsax
                     , conduit
                     , reparsec
                     , bytestring
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
