name:                reparsec
version:             0.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           FP Complete
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Data.Reparsec
    Data.Reparsec.List
    Data.Reparsec.List.Char
    Data.Reparsec.Sequence
  build-depends:       base >= 4.7 && < 5, mtl, containers, conduit
  default-language:    Haskell2010

test-suite reparsec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reparsec
                     , hspec
                     , mtl
                     , containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
